Stop tracking files that will contain sensitive data and use a template instead.

--- a/.gitignore
+++ b/.gitignore
@@ -338,3 +338,7 @@ ASALocalRun/
 
 # BeatPulse healthcheck temp database
 healthchecksdb
+
+# Sensitive data
+appsettings.json
+appsettings.Development.json
