--- a/PuzzleBase.API/appsettings.template.json
+++ b/PuzzleBase.API/appsettings.template.json
@@ -7,5 +7,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ApiUrl": "https://localhost:44360"
+  "ConnectionStrings": {
+    "PuzzleDB": "server=localhost;port=3306;user=root;password=****;database=puzzlebase"
+  }
 }
