--- a/PuzzleBase.Web/PuzzleBase.Web.csproj
+++ b/PuzzleBase.Web/PuzzleBase.Web.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Blazor.HttpClient" Version="3.1.0-preview3.19555.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.0.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -12,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PuzzleBase.DAL\PuzzleBase.DAL.csproj" />
+    <ProjectReference Include="..\PuzzleBase.Models\PuzzleBase.Models.csproj" />
   </ItemGroup>
 
 </Project>
