Create component library. Turn off API page during debugging.

--- a/PuzzleBase.Web/PuzzleBase.Web.csproj
+++ b/PuzzleBase.Web/PuzzleBase.Web.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\PuzzleBase.Components\PuzzleBase.Components.csproj" />
     <ProjectReference Include="..\PuzzleBase.Models\PuzzleBase.Models.csproj" />
   </ItemGroup>
 
