--- a/PuzzleBase.Components/PuzzleBase.Components.csproj
+++ b/PuzzleBase.Components/PuzzleBase.Components.csproj
@@ -7,18 +7,20 @@
 
 
   <ItemGroup>
+    <PackageReference Include="LigerShark.WebOptimizer.Core" Version="3.0.250" />
+    <PackageReference Include="LigerShark.WebOptimizer.Sass" Version="3.0.40-beta" />
     <PackageReference Include="Microsoft.AspNetCore.Components" Version="3.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.0.0" />
   </ItemGroup>
 
 
   <ItemGroup>
-    <Folder Include="wwwroot\" />
+    <ProjectReference Include="..\PuzzleBase.Models\PuzzleBase.Models.csproj" />
   </ItemGroup>
 
 
   <ItemGroup>
-    <ProjectReference Include="..\PuzzleBase.Models\PuzzleBase.Models.csproj" />
+    <None Include="wwwroot\scss\PuzzleTile.scss" />
   </ItemGroup>
 
 </Project>
