Integrate ASP.NET Core 3 Identity authentication services.

--- a/PuzzleBase.Web/appsettings.template.json
+++ b/PuzzleBase.Web/appsettings.template.json
@@ -7,5 +7,8 @@
     }
   },
   "AllowedHosts": "*",
-  "ApiUrl": "https://localhost:44360"
+  "ApiUrl": "https://localhost:44360",
+  "ConnectionStrings": {
+    "PuzzleDB": "server=localhost;port=3306;user=root;password=****;database=puzzlebase"
+  }
 }
