Add helper controls.

--- a/PuzzleBase.Web/PuzzleBase.Web.csproj
+++ b/PuzzleBase.Web/PuzzleBase.Web.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
+    <UserSecretsId>a5ff1c73-de64-44ce-87d2-46e44ba79941</UserSecretsId>
+    <ApplicationIcon>wwwroot\favicon.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
